--- a/druhy.html
+++ b/druhy.html
@@ -1,23 +1,31 @@
-,<!DOCTYPE html>
+,
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=,, initial-scale=1.0">
-    <title>Document</title>
-    
+    <title>Housle</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>
-        Ahoj
+        Housle
     </h1>
-    <a href="./index.html">druha stranka</a>
+    <a href="./index.html">Viola</a>
 
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque harum commodi libero ex recusandae in et labore deleniti nemo. Ex temporibus autem expedita eos voluptas doloribus maxime nam saepe ratione?</p>
+
+    <p>Housle jsou strunný smyčcový nástroj se čtyřmi strunami laděnými v čistých kvintách: g, d¹, a¹, e². Mají hlubokou tradici v evropské klasické hudbě, většina skladatelů jim věnovala důležitou část svého díla. Jsou nejmenší z rodiny houslových nástrojů, mezi které se řadí ještě viola a violoncello. Příbuzný smyčcový nástroj – kontrabas, však svou stavbou patří do violové rodiny (stejně jako např. renesanční a barokní nástroj viola da gamba).
+
+        Kromě klasických houslí existují i jejich různé varianty, například violinofon, který k houslím přidává plechovou ozvučnici, nebo pětistrunné housle, které přidávají pátou strunu a vzniklé housle tak pokrývají i rozsah violy.</p>
 
     <h2>podnadpis</h2>
-
-    <img src="./logo.png" alt="img not found">
+    <iframe src="https://www.youtube.com/embed/watch?v=RBx-Ue28KUE">
+    </iframe>
+    <img src="./Housle.jfif" alt="img not found">
 </body>
+
 </html>
