--- a/StatickeProlinkovaneStranky/housle.html
+++ b/StatickeProlinkovaneStranky/housle.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,14 +9,56 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+
 <body>
-
     <h2>Smičcové nástroje:</h2>
-    <a href="./housle.html">housle</a><br>
-    <a href="./viola.html">viola</a><br>
-    <a href="./violoncello.html">violoncello</a><br>
-    <a href="./kontrabas.html">kontrabas</a><br>
+    <ul class="menu">
+        <li><a href="./housle.html">housle</a></li>
+        <li><a href="./viola.html">viola</a></li>
+        <li><a href="./violoncello.html">violoncello</a></li>
+        <li><a href="./kontrabas.html">kontrabas</a></li>
+    </ul>
 
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    
+
+    <div class="heroHousle"></div>
     <h1>
         Housle
     </h1>
@@ -33,7 +74,19 @@
 
 
 
-    <img src="./Housle.jfif" alt="img not found">
+
+
+    <table>
+        <tr>
+            <th>Skladatel</th>
+            <th colspan="2">Skladby</th>
+        </tr>
+        <tr>
+            <td>Vivaldi</td>
+            <td>ctvero rocnich obdobi</td>
+            <td>houslove koncerty</td>
+        </tr>
+    </table>
 </body>
 
 </html>
