--- a/StatickeProlinkovaneStranky/kontrabas.html
+++ b/StatickeProlinkovaneStranky/kontrabas.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,20 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=,, initial-scale=1.0">
-    <title>kontrabas</title>
+    <title>Kontrabas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
     <h2>Smičcové nástroje:</h2>
-    <a href="./housle.html">housle</a><br>
-    <a href="./viola.html">viola</a><br>
-    <a href="./violoncello.html">violoncello</a><br>
-    <a href="./kontrabas.html">kontrabas</a><br>
-
+    <ul class="menu">
+        <li><a href="./housle.html">housle</a></li>
+        <li><a href="./viola.html">viola</a></li>
+        <li><a href="./violoncello.html">violoncello</a></li>
+        <li><a href="./kontrabas.html">kontrabas</a></li>
+    </ul>
+    <div class="heroKontrabas"></div>
     <h1>
-        kontrabas
+        Kontrabas
     </h1>
 
     <p>Kontrabas (hovorově basa či barbora) je obvykle čtyřstrunný smyčcový nástroj se strunami laděnými v čistých
@@ -29,9 +29,9 @@
         komorních souborů. Velice důležitou roli hraje i v dalších hudebních stylech: jazz, blues, folk, country,
         bluegrass nebo rock and roll. V poslední době se prosazuje také kontrabasový kvartet, což je ansámbl složený
         pouze ze čtyř kontrabasů.
+    </p>
 
-
-        <img src="./kontrabas.jfif" alt="img not found">
+    
 </body>
 
 </html>
