--- a/StatickeProlinkovaneStranky/violoncello.html
+++ b/StatickeProlinkovaneStranky/violoncello.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,13 +10,14 @@
 </head>
 
 <body>
-
     <h2>Smičcové nástroje:</h2>
-    <a href="./housle.html">housle</a> <br>
-    <a href="./viola.html">viola</a><br>
-    <a href="./violoncello.html">violoncello</a><br>
-    <a href="./kontrabas.html">kontrabas</a><br>
-
+    <ul class="menu">
+        <li><a href="./housle.html">housle</a></li>
+        <li><a href="./viola.html">viola</a></li>
+        <li><a href="./violoncello.html">violoncello</a></li>
+        <li><a href="./kontrabas.html">kontrabas</a></li>
+    </ul>
+    <div class="heroVioloncello"></div>
     <h1>
         Violoncello
     </h1>
@@ -30,9 +30,9 @@
         Notace pro violoncello se zapisuje v basovém klíči, ve vyšších pasážích se používá i tenorový a houslový klíč.
 
         Hráč na violoncello se nazývá violoncellista, nebo také zkráceně hovorově cellista.
+    </p>
 
-
-        <img src="./violoncello.jfif" alt="img not found">
+    
 </body>
 
 </html>
